# SamlSP

./: .gitignore  README.md  client_app.py  client_config_sample.py  setup.cfg
SamlSP/: Metadata.py  RequestEncoder.py  ResponseDecoder.py  SPMetaEncoder.py  SamlSP.py  SamlSerializer.py  __init__.py  constants.py
src/: SamlSP
