[metadata]
name=SamlSP
version=22.06.01
author = gunville
author_email = rk13088@yahoo.com
description = A SAML Service Provider Blueprint for Flask Applications
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/Glocktober/SamlSP
project_urls =
    repo = https://github.com/Glocktober/SamlSP.git
    overview = https://github.com/Glocktober/SamlSP/blob/master/README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords='saml2 flask'
[options]
include_package_data = True
package_dir = 
    = src
packages = find:
install_requires =
    Flask>=2.0.0
    Flask-Session>=0.4.0
    requests>=2.26.0
    xmltodict>=0.13.0
    lxml>=4.8.0
    cryptography>=37.0.0

python_requires = >=3.6
[options.data_files] 
[options.packages.find]
where = src